dynC_API/i386-unknown-linux2.4/dynC.output
Terminals which are not used

   CONSTANT
   ERROR
   SIZEOF
   PTR_OP
   LEFT_OP
   RIGHT_OP
   LEFT_ASSIGN
   RIGHT_ASSIGN
   AND_ASSIGN
   XOR_ASSIGN
   OR_ASSIGN
   TYPE_NAME
   TYPEDEF
   EXTERN
   CHAR
   SHORT
   INT
   LONG
   SIGNED
   UNSIGNED
   FLOAT
   DOUBLE
   VOID
   STRUCT
   UNION
   ENUM
   ELLIPSIS
   CASE
   DEFAULT
   SWITCH
   BREAK
   RETURN
   AMPERSAND
   ASTERISK
   NOT
   COLON
   END_BLOCK
   START_BLOCK
   DOLLAR
   '!'
   '~'
   OR_OP
   AND_OP


Grammar

    0 $accept: start $end

    1 start: statement_list

    2 var_declaration: var_decl_modifiers IDENTIFIER
    3                | var_decl_modifiers IDENTIFIER ASSIGN arith_expression

    4 var_decl_modifiers: TYPE
    5                   | STATIC var_decl_modifiers
    6                   | CONST var_decl_modifiers
    7                   | GLOBAL var_decl_modifiers
    8                   | LOCAL var_decl_modifiers
    9                   | THREAD var_decl_modifiers
   10                   | MACHINE var_decl_modifiers

   11 statement_list: statement
   12               | statement_list statement
   13               | NOPEN statement_list NCLOSE

   14 statement: var_declaration SEMI
   15          | arith_expression SEMI
   16          | IF '(' bool_expression ')' block
   17          | IF '(' bool_expression ')' block ELSE block

   18 block: statement
   19      | '{' statement_list '}'

   20 func_call: BACKTICK IDENTIFIER '(' param_list ')'

   21 param_list: /* empty */
   22           | param
   23           | param_list COMMA param

   24 param: arith_expression
   25      | STRING

   26 bool_constant: TRUE
   27              | FALSE

   28 bool_expression: bool_constant
   29                | arith_expression '<' arith_expression
   30                | arith_expression '>' arith_expression
   31                | arith_expression EQ arith_expression
   32                | arith_expression LESS_EQ arith_expression
   33                | arith_expression GREATER_EQ arith_expression
   34                | arith_expression NOT_EQ arith_expression
   35                | bool_expression AND bool_expression
   36                | bool_expression OR bool_expression

   37 var_modifiers: GLOBAL
   38              | LOCAL
   39              | PARAM
   40              | THREAD
   41              | MACHINE

   42 variable_expr: IDENTIFIER
   43              | BACKTICK IDENTIFIER
   44              | var_modifiers BACKTICK IDENTIFIER
   45              | var_modifiers BACKTICK NUMBER
   46              | IDENTIFIER DOT IDENTIFIER

   47 arith_expression: variable_expr
   48                 | NUMBER
   49                 | DYNINST_CALL
   50                 | arith_expression '*' arith_expression
   51                 | func_call
   52                 | variable_expr ASSIGN arith_expression
   53                 | variable_expr ADD_ASSIGN arith_expression
   54                 | variable_expr SUB_ASSIGN arith_expression
   55                 | variable_expr MUL_ASSIGN arith_expression
   56                 | variable_expr DIV_ASSIGN arith_expression
   57                 | variable_expr MOD_ASSIGN arith_expression
   58                 | arith_expression '/' arith_expression
   59                 | arith_expression '%' arith_expression
   60                 | arith_expression '+' arith_expression
   61                 | arith_expression '-' arith_expression
   62                 | '(' arith_expression ')'
   63                 | inc_decr_expr

   64 inc_decr_expr: variable_expr INC_OP
   65              | INC_OP variable_expr
   66              | variable_expr DEC_OP
   67              | DEC_OP variable_expr


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 59
'(' (40) 16 17 20 62
')' (41) 16 17 20 62
'*' (42) 50
'+' (43) 60
'-' (45) 61
'/' (47) 58
'<' (60) 29
'>' (62) 30
'{' (123) 19
'}' (125) 19
'~' (126)
error (256)
IDENTIFIER (258) 2 3 20 42 43 44 46
CONSTANT (259)
STRING (260) 25
TYPE (261) 4
DYNINST_CALL (262) 49
NUMBER (263) 45 48
ERROR (264)
SIZEOF (265)
TRUE (266) 26
FALSE (267) 27
PTR_OP (268)
INC_OP (269) 64 65
DEC_OP (270) 66 67
LEFT_OP (271)
RIGHT_OP (272)
LEFT_ASSIGN (273)
RIGHT_ASSIGN (274)
AND_ASSIGN (275)
XOR_ASSIGN (276)
OR_ASSIGN (277)
TYPE_NAME (278)
TYPEDEF (279)
EXTERN (280)
STATIC (281) 5
CHAR (282)
SHORT (283)
INT (284)
LONG (285)
SIGNED (286)
UNSIGNED (287)
FLOAT (288)
DOUBLE (289)
CONST (290) 6
VOID (291)
STRUCT (292)
UNION (293)
ENUM (294)
ELLIPSIS (295)
IF (296) 16 17
LOCAL (297) 8 38
PARAM (298) 39
THREAD (299) 9 40
GLOBAL (300) 7 37
MACHINE (301) 10 41
CASE (302)
DEFAULT (303)
SWITCH (304)
BREAK (305)
RETURN (306)
COMMA (307) 23
AMPERSAND (308)
ASTERISK (309)
DOT (310) 46
NOT (311)
OR (312) 36
AND (313) 35
NOT_EQ (314) 34
EQ (315) 31
GREATER_EQ (316) 33
LESS_EQ (317) 32
COLON (318)
SEMI (319) 14 15
END_BLOCK (320)
START_BLOCK (321)
NCLOSE (322) 13
NOPEN (323) 13
DOLLAR (324)
BACKTICK (325) 20 43 44 45
ASSIGN (326) 3 52
SUB_ASSIGN (327) 54
ADD_ASSIGN (328) 53
MOD_ASSIGN (329) 57
DIV_ASSIGN (330) 56
MUL_ASSIGN (331) 55
OR_OP (332)
AND_OP (333)
LOWER_THAN_ELSE (334)
ELSE (335) 17


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
start (95)
    on left: 1, on right: 0
var_declaration (96)
    on left: 2 3, on right: 14
var_decl_modifiers (97)
    on left: 4 5 6 7 8 9 10, on right: 2 3 5 6 7 8 9 10
statement_list (98)
    on left: 11 12 13, on right: 1 12 13 19
statement (99)
    on left: 14 15 16 17, on right: 11 12 18
block (100)
    on left: 18 19, on right: 16 17
func_call (101)
    on left: 20, on right: 51
param_list (102)
    on left: 21 22 23, on right: 20 23
param (103)
    on left: 24 25, on right: 22 23
bool_constant (104)
    on left: 26 27, on right: 28
bool_expression (105)
    on left: 28 29 30 31 32 33 34 35 36, on right: 16 17 35 36
var_modifiers (106)
    on left: 37 38 39 40 41, on right: 44 45
variable_expr (107)
    on left: 42 43 44 45 46, on right: 47 52 53 54 55 56 57 64 65 66
    67
arith_expression (108)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63,
    on right: 3 15 24 29 30 31 32 33 34 50 52 53 54 55 56 57 58 59
    60 61 62
inc_decr_expr (109)
    on left: 64 65 66 67, on right: 63


state 0

    0 $accept: . start $end

    IDENTIFIER    shift, and go to state 1
    TYPE          shift, and go to state 2
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    STATIC        shift, and go to state 7
    CONST         shift, and go to state 8
    IF            shift, and go to state 9
    LOCAL         shift, and go to state 10
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 12
    GLOBAL        shift, and go to state 13
    MACHINE       shift, and go to state 14
    NOPEN         shift, and go to state 15
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    start               go to state 18
    var_declaration     go to state 19
    var_decl_modifiers  go to state 20
    statement_list      go to state 21
    statement           go to state 22
    func_call           go to state 23
    var_modifiers       go to state 24
    variable_expr       go to state 25
    arith_expression    go to state 26
    inc_decr_expr       go to state 27


state 1

   42 variable_expr: IDENTIFIER .
   46              | IDENTIFIER . DOT IDENTIFIER

    DOT  shift, and go to state 28

    $default  reduce using rule 42 (variable_expr)


state 2

    4 var_decl_modifiers: TYPE .

    $default  reduce using rule 4 (var_decl_modifiers)


state 3

   49 arith_expression: DYNINST_CALL .

    $default  reduce using rule 49 (arith_expression)


state 4

   48 arith_expression: NUMBER .

    $default  reduce using rule 48 (arith_expression)


state 5

   65 inc_decr_expr: INC_OP . variable_expr

    IDENTIFIER  shift, and go to state 1
    LOCAL       shift, and go to state 29
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 30
    GLOBAL      shift, and go to state 31
    MACHINE     shift, and go to state 32
    BACKTICK    shift, and go to state 33

    var_modifiers  go to state 24
    variable_expr  go to state 34


state 6

   67 inc_decr_expr: DEC_OP . variable_expr

    IDENTIFIER  shift, and go to state 1
    LOCAL       shift, and go to state 29
    PARAM       shift, and go to state 11
    THREAD      shift, and go to state 30
    GLOBAL      shift, and go to state 31
    MACHINE     shift, and go to state 32
    BACKTICK    shift, and go to state 33

    var_modifiers  go to state 24
    variable_expr  go to state 35


state 7

    5 var_decl_modifiers: STATIC . var_decl_modifiers

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    var_decl_modifiers  go to state 40


state 8

    6 var_decl_modifiers: CONST . var_decl_modifiers

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    var_decl_modifiers  go to state 41


state 9

   16 statement: IF . '(' bool_expression ')' block
   17          | IF . '(' bool_expression ')' block ELSE block

    '('  shift, and go to state 42


state 10

    8 var_decl_modifiers: LOCAL . var_decl_modifiers
   38 var_modifiers: LOCAL .

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    $default  reduce using rule 38 (var_modifiers)

    var_decl_modifiers  go to state 43


state 11

   39 var_modifiers: PARAM .

    $default  reduce using rule 39 (var_modifiers)


state 12

    9 var_decl_modifiers: THREAD . var_decl_modifiers
   40 var_modifiers: THREAD .

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    $default  reduce using rule 40 (var_modifiers)

    var_decl_modifiers  go to state 44


state 13

    7 var_decl_modifiers: GLOBAL . var_decl_modifiers
   37 var_modifiers: GLOBAL .

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    $default  reduce using rule 37 (var_modifiers)

    var_decl_modifiers  go to state 45


state 14

   10 var_decl_modifiers: MACHINE . var_decl_modifiers
   41 var_modifiers: MACHINE .

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    $default  reduce using rule 41 (var_modifiers)

    var_decl_modifiers  go to state 46


state 15

   13 statement_list: NOPEN . statement_list NCLOSE

    IDENTIFIER    shift, and go to state 1
    TYPE          shift, and go to state 2
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    STATIC        shift, and go to state 7
    CONST         shift, and go to state 8
    IF            shift, and go to state 9
    LOCAL         shift, and go to state 10
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 12
    GLOBAL        shift, and go to state 13
    MACHINE       shift, and go to state 14
    NOPEN         shift, and go to state 15
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    var_declaration     go to state 19
    var_decl_modifiers  go to state 20
    statement_list      go to state 47
    statement           go to state 22
    func_call           go to state 23
    var_modifiers       go to state 24
    variable_expr       go to state 25
    arith_expression    go to state 26
    inc_decr_expr       go to state 27


state 16

   20 func_call: BACKTICK . IDENTIFIER '(' param_list ')'
   43 variable_expr: BACKTICK . IDENTIFIER

    IDENTIFIER  shift, and go to state 48


state 17

   62 arith_expression: '(' . arith_expression ')'

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 49
    inc_decr_expr     go to state 27


state 18

    0 $accept: start . $end

    $end  shift, and go to state 50


state 19

   14 statement: var_declaration . SEMI

    SEMI  shift, and go to state 51


state 20

    2 var_declaration: var_decl_modifiers . IDENTIFIER
    3                | var_decl_modifiers . IDENTIFIER ASSIGN arith_expression

    IDENTIFIER  shift, and go to state 52


state 21

    1 start: statement_list .
   12 statement_list: statement_list . statement

    IDENTIFIER    shift, and go to state 1
    TYPE          shift, and go to state 2
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    STATIC        shift, and go to state 7
    CONST         shift, and go to state 8
    IF            shift, and go to state 9
    LOCAL         shift, and go to state 10
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 12
    GLOBAL        shift, and go to state 13
    MACHINE       shift, and go to state 14
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    $default  reduce using rule 1 (start)

    var_declaration     go to state 19
    var_decl_modifiers  go to state 20
    statement           go to state 53
    func_call           go to state 23
    var_modifiers       go to state 24
    variable_expr       go to state 25
    arith_expression    go to state 26
    inc_decr_expr       go to state 27


state 22

   11 statement_list: statement .

    $default  reduce using rule 11 (statement_list)


state 23

   51 arith_expression: func_call .

    $default  reduce using rule 51 (arith_expression)


state 24

   44 variable_expr: var_modifiers . BACKTICK IDENTIFIER
   45              | var_modifiers . BACKTICK NUMBER

    BACKTICK  shift, and go to state 54


state 25

   47 arith_expression: variable_expr .
   52                 | variable_expr . ASSIGN arith_expression
   53                 | variable_expr . ADD_ASSIGN arith_expression
   54                 | variable_expr . SUB_ASSIGN arith_expression
   55                 | variable_expr . MUL_ASSIGN arith_expression
   56                 | variable_expr . DIV_ASSIGN arith_expression
   57                 | variable_expr . MOD_ASSIGN arith_expression
   64 inc_decr_expr: variable_expr . INC_OP
   66              | variable_expr . DEC_OP

    INC_OP      shift, and go to state 55
    DEC_OP      shift, and go to state 56
    ASSIGN      shift, and go to state 57
    SUB_ASSIGN  shift, and go to state 58
    ADD_ASSIGN  shift, and go to state 59
    MOD_ASSIGN  shift, and go to state 60
    DIV_ASSIGN  shift, and go to state 61
    MUL_ASSIGN  shift, and go to state 62

    $default  reduce using rule 47 (arith_expression)


state 26

   15 statement: arith_expression . SEMI
   50 arith_expression: arith_expression . '*' arith_expression
   58                 | arith_expression . '/' arith_expression
   59                 | arith_expression . '%' arith_expression
   60                 | arith_expression . '+' arith_expression
   61                 | arith_expression . '-' arith_expression

    '+'   shift, and go to state 63
    '-'   shift, and go to state 64
    '*'   shift, and go to state 65
    '/'   shift, and go to state 66
    '%'   shift, and go to state 67
    SEMI  shift, and go to state 68


state 27

   63 arith_expression: inc_decr_expr .

    $default  reduce using rule 63 (arith_expression)


state 28

   46 variable_expr: IDENTIFIER DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 69


state 29

   38 var_modifiers: LOCAL .

    $default  reduce using rule 38 (var_modifiers)


state 30

   40 var_modifiers: THREAD .

    $default  reduce using rule 40 (var_modifiers)


state 31

   37 var_modifiers: GLOBAL .

    $default  reduce using rule 37 (var_modifiers)


state 32

   41 var_modifiers: MACHINE .

    $default  reduce using rule 41 (var_modifiers)


state 33

   43 variable_expr: BACKTICK . IDENTIFIER

    IDENTIFIER  shift, and go to state 70


state 34

   65 inc_decr_expr: INC_OP variable_expr .

    $default  reduce using rule 65 (inc_decr_expr)


state 35

   67 inc_decr_expr: DEC_OP variable_expr .

    $default  reduce using rule 67 (inc_decr_expr)


state 36

    8 var_decl_modifiers: LOCAL . var_decl_modifiers

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    var_decl_modifiers  go to state 43


state 37

    9 var_decl_modifiers: THREAD . var_decl_modifiers

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    var_decl_modifiers  go to state 44


state 38

    7 var_decl_modifiers: GLOBAL . var_decl_modifiers

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    var_decl_modifiers  go to state 45


state 39

   10 var_decl_modifiers: MACHINE . var_decl_modifiers

    TYPE     shift, and go to state 2
    STATIC   shift, and go to state 7
    CONST    shift, and go to state 8
    LOCAL    shift, and go to state 36
    THREAD   shift, and go to state 37
    GLOBAL   shift, and go to state 38
    MACHINE  shift, and go to state 39

    var_decl_modifiers  go to state 46


state 40

    5 var_decl_modifiers: STATIC var_decl_modifiers .

    $default  reduce using rule 5 (var_decl_modifiers)


state 41

    6 var_decl_modifiers: CONST var_decl_modifiers .

    $default  reduce using rule 6 (var_decl_modifiers)


state 42

   16 statement: IF '(' . bool_expression ')' block
   17          | IF '(' . bool_expression ')' block ELSE block

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    TRUE          shift, and go to state 71
    FALSE         shift, and go to state 72
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    bool_constant     go to state 73
    bool_expression   go to state 74
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 75
    inc_decr_expr     go to state 27


state 43

    8 var_decl_modifiers: LOCAL var_decl_modifiers .

    $default  reduce using rule 8 (var_decl_modifiers)


state 44

    9 var_decl_modifiers: THREAD var_decl_modifiers .

    $default  reduce using rule 9 (var_decl_modifiers)


state 45

    7 var_decl_modifiers: GLOBAL var_decl_modifiers .

    $default  reduce using rule 7 (var_decl_modifiers)


state 46

   10 var_decl_modifiers: MACHINE var_decl_modifiers .

    $default  reduce using rule 10 (var_decl_modifiers)


state 47

   12 statement_list: statement_list . statement
   13               | NOPEN statement_list . NCLOSE

    IDENTIFIER    shift, and go to state 1
    TYPE          shift, and go to state 2
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    STATIC        shift, and go to state 7
    CONST         shift, and go to state 8
    IF            shift, and go to state 9
    LOCAL         shift, and go to state 10
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 12
    GLOBAL        shift, and go to state 13
    MACHINE       shift, and go to state 14
    NCLOSE        shift, and go to state 76
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    var_declaration     go to state 19
    var_decl_modifiers  go to state 20
    statement           go to state 53
    func_call           go to state 23
    var_modifiers       go to state 24
    variable_expr       go to state 25
    arith_expression    go to state 26
    inc_decr_expr       go to state 27


state 48

   20 func_call: BACKTICK IDENTIFIER . '(' param_list ')'
   43 variable_expr: BACKTICK IDENTIFIER .

    '('  shift, and go to state 77

    $default  reduce using rule 43 (variable_expr)


state 49

   50 arith_expression: arith_expression . '*' arith_expression
   58                 | arith_expression . '/' arith_expression
   59                 | arith_expression . '%' arith_expression
   60                 | arith_expression . '+' arith_expression
   61                 | arith_expression . '-' arith_expression
   62                 | '(' arith_expression . ')'

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64
    '*'  shift, and go to state 65
    '/'  shift, and go to state 66
    '%'  shift, and go to state 67
    ')'  shift, and go to state 78


state 50

    0 $accept: start $end .

    $default  accept


state 51

   14 statement: var_declaration SEMI .

    $default  reduce using rule 14 (statement)


state 52

    2 var_declaration: var_decl_modifiers IDENTIFIER .
    3                | var_decl_modifiers IDENTIFIER . ASSIGN arith_expression

    ASSIGN  shift, and go to state 79

    $default  reduce using rule 2 (var_declaration)


state 53

   12 statement_list: statement_list statement .

    $default  reduce using rule 12 (statement_list)


state 54

   44 variable_expr: var_modifiers BACKTICK . IDENTIFIER
   45              | var_modifiers BACKTICK . NUMBER

    IDENTIFIER  shift, and go to state 80
    NUMBER      shift, and go to state 81


state 55

   64 inc_decr_expr: variable_expr INC_OP .

    $default  reduce using rule 64 (inc_decr_expr)


state 56

   66 inc_decr_expr: variable_expr DEC_OP .

    $default  reduce using rule 66 (inc_decr_expr)


state 57

   52 arith_expression: variable_expr ASSIGN . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 82
    inc_decr_expr     go to state 27


state 58

   54 arith_expression: variable_expr SUB_ASSIGN . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 83
    inc_decr_expr     go to state 27


state 59

   53 arith_expression: variable_expr ADD_ASSIGN . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 84
    inc_decr_expr     go to state 27


state 60

   57 arith_expression: variable_expr MOD_ASSIGN . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 85
    inc_decr_expr     go to state 27


state 61

   56 arith_expression: variable_expr DIV_ASSIGN . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 86
    inc_decr_expr     go to state 27


state 62

   55 arith_expression: variable_expr MUL_ASSIGN . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 87
    inc_decr_expr     go to state 27


state 63

   60 arith_expression: arith_expression '+' . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 88
    inc_decr_expr     go to state 27


state 64

   61 arith_expression: arith_expression '-' . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 89
    inc_decr_expr     go to state 27


state 65

   50 arith_expression: arith_expression '*' . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 90
    inc_decr_expr     go to state 27


state 66

   58 arith_expression: arith_expression '/' . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 91
    inc_decr_expr     go to state 27


state 67

   59 arith_expression: arith_expression '%' . arith_expression

    IDENTIFIER    shift, and go to state 1
    DYNINST_CALL  shift, and go to state 3
    NUMBER        shift, and go to state 4
    INC_OP        shift, and go to state 5
    DEC_OP        shift, and go to state 6
    LOCAL         shift, and go to state 29
    PARAM         shift, and go to state 11
    THREAD        shift, and go to state 30
    GLOBAL        shift, and go to state 31
    MACHINE       shift, and go to state 32
    BACKTICK      shift, and go to state 16
    '('           shift, and go to state 17

    func_call         go to state 23
    var_modifiers     go to state 24
    variable_expr     go to state 25
    arith_expression  go to state 92
    inc_decr_expr     go to state 27


state 68

   15 statement: arith_expression SEMI .

    $default  reduce using rule 15 (statement)


state 69

   46 variable_expr: IDENTIFIER DOT IDENTIFIER .

    $default  reduce using rule 46 (variable_expr)


state 70

   43 variable_expr: BACKTICK IDENTIFIER .

    $default  reduce using rule 43 (variable_expr)


state 71

   26 bool_constant: TRUE .

    $default  reduce using rule 26 (bool_constant)


state 72

   27 bool_constant: FALSE .

    $default  reduce using rule 27 (bool_constant)


state 73

   28 bool_expression: bool_constant .

    $default  reduce using rule 28 (bool_expression)


state 74

   16 statement: IF '(' bool_expression . ')' block
   17          | IF '(' bool_expression . ')' block ELSE block
   35 bool_expression: bool_expression . AND bool_expression
   36                | bool_expression . OR bool_expression

    OR   shift, and go to state 93
    AND  shift, and go to state 94
    ')'  shift, and go to state 95


state 75

   29 bool_expression: arith_expression . '<' arith_expression
   30                | arith_expression . '>' arith_expression
   31                | arith_expression . EQ arith_expression
   32                | arith_expression . LESS_EQ arith_expression
   33                | arith_expression . GREATER_EQ arith_expression
   34                | arith_expression . NOT_EQ arith_expression
   50 arith_expression: arith_expression . '*' arith_expression
   58                 | arith_expression . '/' arith_expression
   59                 | arith_expression . '%' arith_expression
   60                 | arith_expression . '+' arith_expression
   61                 | arith_expression . '-' arith_expression

    NOT_EQ      shift, and go to state 96
    EQ          shift, and go to state 97
    GREATER_EQ  shift, and go to state 98
    LESS_EQ     shift, and go to state 99
    '+'         shift, and go to state 63
    '-'         shift, and go to state 64
    '*'         shift, and go to state 65
    '/'         shift, and go to state 66
    '%'         shift, and go to state 67
    '<'         shift, and go to state 100
    '>'         shift, and go to state 101


state 76
